--- a/gridLayout.css
+++ b/gridLayout.css
@@ -21,3 +21,16 @@
         font-size: 30px;
         text-align: center;
     }
+.grid-container2{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 10px;
+    padding: 20px;
+    background-color: #36f321;
+
+}
+[class *= 'item']{
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.8);
+    border: solid rgba(0,0,0,0.5) 2px;
+}
